<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Exams and Questions">
        <menu>
            <item
                android:id="@+id/nav_all_exams"
                android:icon="@drawable/ic_list_24dp"
                android:title="@string/all_exams" />
            <item
                android:id="@+id/nav_tagged_questions"
                android:icon="@drawable/ic_bookmark_border"
                android:title="@string/bookmarked_questions" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_assignment_24dp"
                android:title="@string/notes" />
        </menu>
    </item>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_account_circle_24dp"
            android:title="About us" />
        <item
            android:id="@+id/nav_give_us_tip"
            android:icon="@drawable/ic_lightbulb_outline_24dp"
            android:title="Give us a tip" />
        <!--<item-->
        <!--android:id="@+id/nav_sign_out"-->
        <!--android:icon="@drawable/ic_cloud_download__24dp"-->
        <!--android:title="Download" />-->
    </group>
    <!--</item>-->

    <group android:checkableBehavior="single" android:id="@+id/Settings_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />

    </group>
    <item android:title=" " />
    <item android:title=" " />

</menu>
