<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbffffff"
    android:orientation="vertical"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="85%">

        <TextView
            android:id="@+id/txtv_main_title"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#222"
            android:textSize="24sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/card_margin"
            android:gravity="center"
            android:text="@string/login_with_facebook_or_g_mail"
            android:textAllCaps="false"
            android:textColor="#222" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="20%"
        app:layout_widthPercent="80%">

        <Button
            android:id="@+id/btnn_fake_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_login_facebook"
            android:gravity="right|center_vertical"
            android:padding="@dimen/card_margin"
            android:text="@string/facebook"
            android:textAllCaps="true"
            android:textColor="@color/primaryWhite"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnn_fake_google_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_login_google"
            android:gravity="left|center_vertical"
            android:padding="@dimen/card_margin"
            android:text="@string/google"
            android:textAllCaps="true"
            android:textColor="#222"

            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="--- OR ---"
        android:textAllCaps="true"
        android:textColor="#222"
        android:textSize="20sp"
        app:layout_marginTopPercent="32%"
        app:layout_widthPercent="80%" />


    <LinearLayout
        android:id="@+id/lnrl_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_marginTopPercent="40%"
        app:layout_widthPercent="80%">

        <!--<com.google.android.material.textfield.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/EditTextHint">-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtv_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtv_login_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btnn_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrl_email_input"
        android:paddingTop="@dimen/card_margin"
        android:text="@string/forgot_password"
        android:textColor="#555"
        app:layout_marginLeftPercent="10%" />

    <Button

        android:id="@+id/btnn_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:background="@drawable/bg_login_email"
        android:gravity="center"
        android:text="@string/login_now"
        android:textAllCaps="true"
        android:textColor="@color/primaryWhite"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="70%"
        app:layout_widthPercent="80%" />


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_marginTopPercent="85%"
        app:layout_widthPercent="90%">

        <TextView
            android:id="@+id/txtv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Don't have account? "
            android:textAllCaps="false"
            android:textColor="#222"
            app:layout_marginTopPercent="90%" />

        <TextView
            android:id="@+id/txtv_log_in_or_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/card_margin"
            android:text="@string/sign_up_now"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtv_logged_in_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorBrokenWhite" />
</androidx.percentlayout.widget.PercentRelativeLayout>
