<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register_organism"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/card_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <!-- title-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginTop="0dip"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_margin"
                android:text="@string/reset_your_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/colorAccent"
                android:gravity="left|center_vertical"
                android:padding="@dimen/card_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:padding="@dimen/card_margin"
                android:text="@string/we_shall_send_you_password_resetting_instruction_via_email" />


            <EditText
                android:id="@+id/txte_reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:gravity="left|center_vertical"
                android:padding="@dimen/card_margin" />


            <Button
                android:id="@+id/btnn_reset_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:padding="@dimen/card_margin"
                android:text="@string/reset" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>